<resources>
    <string name="app_name">HotelBooking</string>
    <!-- Buttons -->
    <string name="book">Book Now</string>
    <string name="loginBtn">Login</string>
    <string name="submit">Submit</string>
    <string name="preview">Preview</string>
    <!-- EditText -->
    <string name="name">Please Enter Your Full Name</string>
    <string name="email">Please Enter Your email Address</string>
    <string name="pass">Please Enter Password</string>
    <string name="phone">Please Enter Your Phone Number</string>
    <string name="people">Please Enter Number of People</string>
    <string name="address">Please Enter Your Address</string>
    <string name="noRoom">Please Enter Number of Room</string>
    <string name="checkIn">Please Select Check IN Date</string>
    <string name="checkout">Please Select Check OUT Date</string>
    <!-- TextView -->
    <string name="login">Login Page</string>
    <string name="title">Hotel Booking</string>
    <string name="personnel">Personnel Information</string>
    <string name="room">Room Information</string>
    <string name="finalPage">Preview Information</string>
    <string name="content">Overall a great experience. clean and big rooms. It serves vegetarian food only.</string>
    <!-- Content Description -->
    <string name="single">SingleBed Room</string>
    <string name="two">DoubleBed Room</string>
    <!-- Array for Type of rooms -->
    <string-array name="type">
        <item>Select Room Type</item>
        <item>Single Bed Room</item>
        <item>Double Bed Room</item>
        <item>Deluxe Bed Room</item>
        <item>Super Deluxe Bed Room</item>
    </string-array>
</resources>