<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F48FB1"
    android:orientation="vertical"
    tools:context=".PersonnelInfoActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/personnel"
        android:textColor="#01579B"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="#AD1457"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#AD1457"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="#AD1457"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="20"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textColorHint="#AD1457"
        android:textSize="20sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="#68B1EC"
        android:textSize="15sp"
        android:text="@string/submit" />
</LinearLayout>