<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#578A85"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#263238"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_below="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:textColor="#F3EA3B"
        android:fontFamily="monospace"/>

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="18"
        android:hint="@string/enter"
        android:inputType="textEmailAddress"
        android:textColorHint="#263238"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edEmail"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="18"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColorHint="#263238"
        android:textSize="20sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edPass"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#EF9A9A"
        android:text="@string/submit"
        android:textColor="#795548"
        android:textSize="20sp" />

</RelativeLayout>